<resources>
    <string name="app_name">Tugas 1</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="txemail">Ini hasil Email</string>
    <string name="txpassword">Ini hasil password</string>
    <string name="label2">Login Berhasil</string>
    <string name="data">Data Anda</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="ldaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama</string>
    <string name="notel">Nomor Telepon</string>
    <string name="Signin">Masuk</string>
    <string name="blmdaftar">Belum Mendaftar</string>
    <string name="rdlk">Laki-laki</string>
    <string name="rdperem">Perempuan</string>
</resources>